[gd_scene load_steps=26 format=2]

[ext_resource path="res://Players/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Players/Player/FakeMesh.gd" type="Script" id=2]
[ext_resource path="res://Players/Player/PlayerHitBox.gd" type="Script" id=3]
[ext_resource path="res://addons/godot-rollback-netcode/NetworkAnimationPlayer.gd" type="Script" id=4]

[sub_resource type="CubeMesh" id=3]

[sub_resource type="CapsuleMesh" id=13]

[sub_resource type="SphereMesh" id=2]

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "UnSlide"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "Slide"

[sub_resource type="AnimationNodeTransition" id=17]
input_count = 2
input_0/name = "true"
input_0/auto_advance = false
input_1/name = "false"
input_1/auto_advance = false

[sub_resource type="AnimationNodeBlendTree" id=18]
graph_offset = Vector2( -502, 51 )
nodes/Animation/node = SubResource( 16 )
nodes/Animation/position = Vector2( -400, 220 )
"nodes/Animation 2/node" = SubResource( 15 )
"nodes/Animation 2/position" = Vector2( -400, 80 )
nodes/Transition/node = SubResource( 17 )
nodes/Transition/position = Vector2( -40, 140 )
nodes/output/position = Vector2( 300, 140 )
node_connections = [ "output", 0, "Transition", "Transition", 0, "Animation 2", "Transition", 1, "Animation" ]

[sub_resource type="AnimationNodeTransition" id=21]
input_count = 2
input_0/name = "WallRunLeft"
input_0/auto_advance = false
input_1/name = "WallRunRight"
input_1/auto_advance = false

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "WallRunRight"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "WallRunLeft"

[sub_resource type="AnimationNodeBlendTree" id=24]
graph_offset = Vector2( -456.084, 96.6098 )
nodes/Transition/node = SubResource( 21 )
nodes/Transition/position = Vector2( -116, 181 )
nodes/WallRunLeft/node = SubResource( 22 )
nodes/WallRunLeft/position = Vector2( -480, 300 )
nodes/WallRunRight/node = SubResource( 23 )
nodes/WallRunRight/position = Vector2( -480, 160 )
node_connections = [ "output", 0, "Transition", "Transition", 0, "WallRunRight", "Transition", 1, "WallRunLeft" ]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachine" id=19]
states/Sliding/node = SubResource( 18 )
states/Sliding/position = Vector2( 92, 104 )
states/WallRun/node = SubResource( 24 )
states/WallRun/position = Vector2( 482, 104 )
transitions = [ "Sliding", "WallRun", SubResource( 27 ), "WallRun", "Sliding", SubResource( 28 ) ]
start_node = "Sliding"
graph_offset = Vector2( -114, -24 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=20]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Node/Spatial/PlayerMesh:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -90, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Node/HitBox:Height")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3000 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Node/HitBox:Depth")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2000 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Node/HitBox:Width")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2000 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Node/HitBox:X")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -1000 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Node/HitBox:Y")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -2000 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Node/HitBox:Z")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -1000 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Node/Spatial/PlayerMesh:translation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -750, 0 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Camera:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 180, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Slide"
length = 0.125
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Node/Spatial/PlayerMesh:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -90, 0, 0 ), Vector3( -150, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.125 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -670, -860 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Node/Spatial/PlayerMesh:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.125 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -500, 0 ), Vector3( 0, -870, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Camera:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.125 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 180, 0 ), Vector3( 0, 180, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Node/HitBox:Height")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833334, 0.125 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3000, 3000, 2850, 2560 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Node/HitBox:Depth")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833334, 0.125 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2000, 2400, 2700, 2900 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Node/HitBox:Width")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833334, 0.125 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2000, 2000, 2000, 2000 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Node/HitBox:X")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833334, 0.125 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ -1000, -1000, -1000, -1000 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Node/HitBox:Y")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833334, 0.125 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ -2000, -2130, -2150, -2150 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Node/HitBox:Z")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833334, 0.125 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ -1000, -1200, -1350, -1450 ]
}

[sub_resource type="Animation" id=11]
resource_name = "UnSlide"
length = 0.125
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Node/Spatial/PlayerMesh:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -150, 0, 0 ), Vector3( -90, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.125 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -670, -860 ), Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Node/Spatial/PlayerMesh:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.125 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -870, 0 ), Vector3( 0, -500, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Camera:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.125 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 180, 0 ), Vector3( 0, 180, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Node/HitBox:Height")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833334, 0.125 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2560, 2800, 2990, 3000 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Node/HitBox:Depth")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833334, 0.125 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2900, 2680, 2384, 2000 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Node/HitBox:Width")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833334, 0.125 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2000, 2000, 2000, 2000 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Node/HitBox:X")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833334, 0.125 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ -1000, -1000, -1000, -1000 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Node/HitBox:Y")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833334, 0.125 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ -2150, -2150, -2120, -2000 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Node/HitBox:Z")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833334, 0.125 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ -1450, -1334, -1185, -1000 ]
}

[sub_resource type="Animation" id=25]
resource_name = "WallRunLeft"
length = 0.25
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Node/Spatial/PlayerMesh:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -90, 90, -90 ), Vector3( -60, 90, -90 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node/Spatial/PlayerMesh:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -565, 0 ), Vector3( 650, -565, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Camera:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 950, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Camera:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 180, 0 ), Vector3( 0, 180, 30 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Node/HitBox:Height")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3000 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Node/HitBox:Depth")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2000 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Node/HitBox:Width")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833334, 0.125, 0.166667, 0.208334, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2000, 2091, 2182, 2274, 2366, 2458, 2550 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Node/HitBox:X")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833334, 0.125, 0.166667, 0.208334, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ -1000, -936, -872, -809, -746, -683, -616 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Node/HitBox:Y")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -2000 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Node/HitBox:Z")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -1000 ]
}

[sub_resource type="Animation" id=26]
resource_name = "WallRunRight"
length = 0.25
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Node/Spatial/PlayerMesh:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -90, 0, 0 ), Vector3( -60, -90, 90 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node/Spatial/PlayerMesh:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -565, 0 ), Vector3( -650, -565, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Camera:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -950, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Camera:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 180, 0 ), Vector3( 0, 180, -30 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Node/HitBox:Height")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3000 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Node/HitBox:Depth")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2000 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Node/HitBox:Width")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833334, 0.125, 0.166667, 0.208334, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2000, 2088, 2176, 2264, 2352, 2441, 2530 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Node/HitBox:X")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833334, 0.125, 0.166667, 0.208334, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ -1000, -1151, -1302, -1454, -1606, -1758, -1910 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Node/HitBox:Y")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -2000 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Node/HitBox:Z")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -1000 ]
}

[sub_resource type="CubeMesh" id=14]

[node name="Player" type="Spatial" groups=["network_sync"]]
script = ExtResource( 1 )

[node name="Aim" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1.0
margin_top = -1.0
margin_right = 1.0
margin_bottom = 1.0

[node name="Node" type="Node" parent="."]

[node name="HitBox" type="Spatial" parent="Node" groups=["PlayerHitBoxes"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1000 )
script = ExtResource( 3 )
Height = 3000
Depth = 2000
Width = 2000
X = -1000
Y = -2000
Z = -1000

[node name="V1" type="MeshInstance" parent="Node/HitBox"]
transform = Transform( 100, 0, -3.8147e-06, 0, 100, 0, 3.8147e-06, 0, 100, -1000, -2000, -2000 )
mesh = SubResource( 3 )
skeleton = NodePath("../../..")

[node name="V2" type="MeshInstance" parent="Node/HitBox"]
transform = Transform( 100, 0, -3.8147e-06, 0, 100, 0, 3.8147e-06, 0, 100, 1000, -2000, -2000 )
mesh = SubResource( 3 )
skeleton = NodePath("../../..")

[node name="V3" type="MeshInstance" parent="Node/HitBox"]
transform = Transform( 100, 0, -3.8147e-06, 0, 100, 0, 3.8147e-06, 0, 100, -1000, -2000, 0 )
mesh = SubResource( 3 )
skeleton = NodePath("../../..")

[node name="V4" type="MeshInstance" parent="Node/HitBox"]
transform = Transform( 100, 0, -3.8147e-06, 0, 100, 0, 3.8147e-06, 0, 100, 1000, -2000, 0 )
mesh = SubResource( 3 )
skeleton = NodePath("../../..")

[node name="HV" type="MeshInstance" parent="Node/HitBox"]
transform = Transform( 100, 0, -3.8147e-06, 0, 100, 0, 3.8147e-06, 0, 100, 0, 1000, -1000 )
mesh = SubResource( 3 )
skeleton = NodePath("../../..")

[node name="CSGPolygon" type="CSGPolygon" parent="Node/HitBox"]
transform = Transform( 1, 8.74228e-08, 8.74228e-08, 8.74228e-08, -1, 0, 8.74228e-08, 7.64274e-15, -1, 0, 0, -2000 )
polygon = PoolVector2Array( -1000, 2000, 1000, 2000, 1000, -1000, -1000, -1000 )
depth = 2000.0

[node name="Spatial" type="Spatial" parent="Node"]
transform = Transform( 0.999999, 0, 0, 0, 0.999999, 0, 0, 0, 0.999998, 1, 1, 1 )
script = ExtResource( 2 )

[node name="PlayerMesh" type="MeshInstance" parent="Node/Spatial"]
transform = Transform( 999.99, 0, 0, 0, -4.37112e-05, 1000.01, 0, -999.995, -4.37118e-05, 0, -750, 0 )
mesh = SubResource( 13 )
skeleton = NodePath("../../..")

[node name="MeshInstance" type="MeshInstance" parent="Node"]
transform = Transform( 1000, 0, 0, 0, 1000, 0, 0, 0, 1000, 0, 0, 133 )
visible = false
mesh = SubResource( 2 )
skeleton = NodePath("../..")

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
near = 50.0
far = 1e+06

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 19 )
anim_player = NodePath("../NetworkAnimationPlayer")
process_mode = 0
parameters/playback = SubResource( 20 )
parameters/Sliding/Transition/current = 0
parameters/WallRun/Transition/current = 0

[node name="NetworkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/Slide = SubResource( 5 )
anims/UnSlide = SubResource( 11 )
anims/WallRunLeft = SubResource( 25 )
anims/WallRunRight = SubResource( 26 )
script = ExtResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1000, 0, 0, 0, 10, 0, 0, 0, 1000, 0, -2009.46, 0 )
mesh = SubResource( 14 )

[node name="Accel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 14.0

[node name="GlobalTimer" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_top = 33.0
margin_bottom = 47.0

[node name="JumpCount" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_top = 64.0
margin_bottom = 78.0
